# Mean_Shift_Parallel_Computing_Final_Project

./: CMakeLists.txt  Mean_Shift_Presentation.pptx  README.md
include/: MeanShift.h  Point.h  Utils.h
src/: MeanShift.cpp  Point.cpp  Utils.cpp  main_parallel_cuda.cu  main_parallel_openMP.cpp  main_reports.cpp  main_sequential.cpp
